--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"overmind": "^20.0.0",
+		"overmind-react": "^21.0.0",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-scripts": "3.1.1",
