--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"overmind": "^20.0.0",
 		"overmind-react": "^21.0.0",
 		"react": "^16.9.0",
+		"react-copy-to-clipboard": "^5.0.1",
 		"react-dom": "^16.9.0",
 		"react-scripts": "3.1.1",
 		"styled-components": "^4.3.2",
