--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ace2klpq_loadouts",
   "homepage": "https://apps.dura.science/arma3loadouts",
-  "version": "1.1.6",
+  "version": "1.2.6",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "overmind": "^20.0.0",
     "overmind-react": "^21.0.0",
     "react": "^16.9.0",
